manifests/apimap-api-1.8.11.tgz-manifest.yaml
---
# Source: apimap-api/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apimap-api-my-release-service
  namespace: default
  labels:
    app: apimap-api-my-release-api
spec:
  
  type: ClusterIP
  
  ports:
    
    
    - name: https
      port: 8080
      targetPort: 8080
    
  selector:
    app: apimap-api-my-release-api
---
# Source: apimap-api/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apimap-api-my-release-deployment
  namespace: default
  labels:
    app: apimap-api-my-release-api
    role: api
    supplier: apimap.io
spec:
  replicas: 2
  selector:
    matchLabels:
      app: apimap-api-my-release-api
  template:
    metadata:
      labels:
        app: apimap-api-my-release-api
      annotations:
        checksum/config: 603e9554ce4f96951637fd5be9e8ef8235a9a3c75e90b170eb9faa34ad35e123
    spec:
      containers:
        - name: apimap-api-my-release-api
          image: apimap/api:v1.8.11
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
            - name: https
              containerPort: 8080
---
# Source: apimap-api/templates/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: apimap-api-my-release-ingress
  namespace: default
  labels:
    host: 
spec:
  
  rules:
    - host: 
      http:
        paths:
          - backend:
              service:
                name: apimap-api-my-release-service
                port:
                  number: 8080
            path: /
            pathType: Prefix
